<resources>
    <string name="app_encryption_desc">In order to proceed with your device upgrade you must decrypt previously encrypted apps. Click continue to unlock your credential store and decrypt your apps. Once complete you will have the option to enable full device encryption.</string>
    <string name="app_encryption_button_text">Continue</string>
    <string name="nfc_toggle_disabled">IT has disabled NFC</string>
    <string name="cantDeactivate3LM">3LM deactivation is not allowed</string>
    <string name="sd_encrypt_dialog">Encrypting your SD card will erase any data. Non-encrypted cards will be mounted read-only. Press OK to enable encryption or choose Skip to mount as read-only.</string>
    <string name="skip">Skip</string>
    <string name="sd_encrypt_title">Encrypt SD card?</string>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="lock_after_timeout_immedi_summary">Locks screen when screen automatically turns off</string>
    <string name="lock_timeout_max">Maximum (%s)</string>
    <string name="dialogMessage">Password does not match</string>
    <string name="emptyMessage">Password should not be empty</string>
    <string name="pwdMessage">Password should have more than 4 digits</string>
    <string name="phone_password_settings_category">Factory data reset password</string>
    <string name="phone_password_settings_title">Set up/change password</string>
    <string name="lang_title">Select input languages</string>
    <string name="new_password">New password</string>
    <string name="password">Password</string>
    <string name="confirm_old_password">Enter old password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="masked_star_chars">****</string>
    <string name="collect_diagnostics_title">Collect diagnostics</string>
    <string name="collect_diagnostics_summary">Collect diagnostics data for troubleshooting</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">Wireless and network</string>
    <string name="header_category_device">Device</string>
    <string name="header_category_personal">Personal</string>
    <string name="header_category_system">System</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="lockscreen_emergency_call">Emergency call</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="sdcard_setting_sd">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="battery_info_health_cold">Cold</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Visible</string>
    <string name="bluetooth_is_discoverable">Visible for %s seconds</string>
    <string name="bluetooth_is_discoverable_always">Visible</string>
    <string name="bluetooth_not_visible_to_other_devices">Not visible to other Bluetooth devices</string>
    <string name="bluetooth_only_visible_to_paired_devices">Only visible to paired devices</string>
    <string name="bluetooth_not_discoverable">Make device visible</string>
    <string name="bluetooth_visibility_timeout">Visible time-out</string>
    <string name="bluetooth_visibility_timeout_summary">Set how long device will be visible for</string>
    <string name="bluetooth_lock_voice_dialing">Lock voice dialing</string>
    <string name="bluetooth_lock_voice_dialing_summary">Disable Bluetooth voice dialling when screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan for devices</string>
    <string name="bluetooth_rename_device">Rename device</string>
    <string name="bluetooth_rename_button">Rename</string>
    <string name="bluetooth_disconnect_title">Disconnect?</string>
    <string name="bluetooth_disconnect_all_profiles">This will end your connection with:&lt;br>&lt;b>%1$s&lt;/b></string>
    <string name="bluetooth_disable_profile_title">Disable profile?</string>
    <string name="bluetooth_disable_profile_message">This will disable:&lt;br>&lt;b>%1$s&lt;/b>&lt;br>&lt;br>From:&lt;br>&lt;b>%2$s&lt;/b></string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_connected_no_headset">Connected (no phone)</string>
    <string name="bluetooth_connected_no_a2dp">Connected (no media)</string>
    <string name="bluetooth_connected_no_headset_no_a2dp">Connected (no phone or media)</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting…</string>
    <string name="bluetooth_connecting">Connecting…</string>
    <string name="wifi_cancel">Cancel</string>
    <string name="motion_settings_title">Motion settings</string>
    <string name="motion_activation">Motion activation</string>
    <string name="tilt_title">Tilt to zoom</string>
    <string name="pan_title">Pan to edit</string>
    <string name="tilt_summary">Reduce or enlarge screen in Gallery and Browser</string>
    <string name="pan_summary">Move icons one at a time to another page in Home and Applications edit mode</string>
    <string name="motion_tutorial_done_btn">Done</string>
    <string name="settings_menu_done">Done</string>
    <string name="fdn">Fixed Dialing Numbers</string>
    <string name="sum_fdn">Manage Fixed Dialing Numbers</string>
    <string name="voicemail">Voice mail</string>
    <string name="labelCF">Call forwarding</string>
    <string name="callsettings_allcalls_answeringcall">Call answering/ending</string>
    <string name="callsettings_list2_sub_text">Manage call answering/ending settings</string>
    <string name="callsettings_allcalls_autoreject">Call rejection</string>
    <string name="callsettings_list1_sub_text">Manage auto reject mode</string>
    <string name="reject_call_with_msg">Set reject messages</string>
    <string name="reject_call_with_msg_sub_text">Edit reject messages</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="category_videoCallSettings">Video call settings</string>
    <string name="menu_videocallImage">Video call image</string>
    <string name="summary_videocallImage">Set default Hide me image</string>
    <string name="menu_ownVideoInReceivedCall">Own video in received call</string>
    <string name="summary_ownVideoInReceivedCall">Show live image to caller when user accepts video call</string>
    <string name="menu_useCallFailOption">Use call fail options</string>
    <string name="summary_useCallFailOption">Use alternative methods to reattempt failed call</string>
    <string name="menu_activateProximitySensor">Turn on proximity sensor</string>
    <string name="summary_activateProximitySensor">LCD turns off during calls</string>
</resources>