<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/button_layout" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:id="@id/revert_menu_item" android:background="@drawable/tw_common_list_item_background" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:description="@string/wifi_cancel" android:layout_gravity="center_vertical" android:id="@id/revert_menu_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/header_btn_icon_cancel" android:scaleType="fitEnd" android:adjustViewBounds="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/action_bar_button_text_color" android:layout_gravity="center_vertical" android:id="@id/revert_menu_text" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/wifi_cancel" />
        </LinearLayout>
        <LinearLayout android:id="@id/save_menu_item" android:background="@drawable/tw_common_list_item_background" android:focusable="true" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <ImageView android:description="@string/motion_tutorial_done_btn" android:layout_gravity="center_vertical" android:id="@id/save_menu_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/header_btn_icon_check" android:scaleType="fitEnd" android:adjustViewBounds="true" />
            <TextView android:textSize="17.0dip" android:textColor="@color/action_bar_button_text_color" android:layout_gravity="center_vertical" android:id="@id/save_menu_text" android:visibility="gone" android:duplicateParentState="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:text="@string/settings_menu_done" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
